Fix layout problems

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,13 @@
+
 #root {
-    margin: 1rem;;
-    padding: 1rem;
-    height: 100vh;
+    margin: 0.25rem;
+    padding: 0;
+    height: calc(100vh - 0.5rem);
+    width: calc(100vw - 0.5rem);
 }
 
 body {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     margin: 0;
 }
