--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,24 @@
 body {
   display: flex;
   place-items: center;
+//  min-width: 320px;
+//  min-height: 320px;
+}
+
+/*
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  display: flex;
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,4 +56,7 @@ button:hover {
 button:focus, button:focus-visible {
   outline: 4px auto;
 }
+
+*/
+
 
