--- a/src/workbench/Workbench.scss
+++ b/src/workbench/Workbench.scss
@@ -6,8 +6,17 @@ pre {
 }
 
 .workbench {
-    margin: 1rem;
-    width: 100vw;
-    height: 100vh;
+    margin: 0.5rem;
+    width: calc(100% - 1rem);
+    height: calc(100% - 1rem);
+}
+
+.banner {
+    height: 3rem;
+    margin-bottom: 2rem;
+}
+
+.workspace {
+    height: calc(100% - 5rem);
 }
 
